Bug 148849 - Cursor jumps outside the table after deleting a row (track changes involved)
Summary: Cursor jumps outside the table after deleting a row (track changes involved)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
: 150309 (view as bug list)
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-04-29 12:30 UTC by Telesto
Modified: 2022-08-30 12:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (2.31 KB, text/plain)
2022-04-29 12:38 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-29 12:30:03 UTC
Description:
Cursor jumps outside the table after deleting a row

Steps to Reproduce:
1. Open attachment 179280 [details] (source bug 148386)
2. Press Enter
3. Place cursor in bottom row of table
4. press delete table

Actual Results:
Cursor jumps to top of the page

Expected Results:
Moves the cell above


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4659fc2f0a7223a89446edff0b77e58758b5edf5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-GB
Calc: CL
Comment 1 Telesto 2022-04-29 12:32:50 UTC
Not in
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 7b0aabe71d2455f6f643553a07f1056935cf190f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 2 Telesto 2022-04-29 12:38:22 UTC
Created attachment 179844 [details]
Bibisect log

Bisected to:
author	László Németh <nemeth@numbertext.org>	2022-02-28 12:35:27 +0100
committer	László Németh <nemeth@numbertext.org>	2022-02-28 16:32:08 +0100
commit a74c51025fa4519caaf461492e4ed8e68bd34885 (patch)
tree 4fe70555f7e01acb7eea745029185b87dc1a14ab
parent 6fb261607810fb0d542c0818f60a3f9bead33032 (diff)
tdf#146962 sw: hide deleted row at deletion in Hide Changes
In Hide Changes mode, deleting table rows with change tracking
wasn't applied on the table layout immediately, only using Show
Changes and Hide Changes again. Now the deleted row removed from
the table instead leaving an empty table row (except the last
row of a wholly deleted table).

See also commit 95213407dfcbf34056037d60243ff915340d1a2e
"tdf#146622 sw crash fix: don't delete already deleted rows".
Comment 3 Telesto 2022-04-29 12:40:46 UTC
Adding CC: to László Németh 

More a heads up for now, no conformation, yet
Comment 4 Telesto 2022-08-09 12:20:39 UTC
*** Bug 150309 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2022-08-22 16:09:07 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/189aa05c6ea17a8e823b4eab18ea0d1131d9d73e

tdf#148849 sw: fix cursor pos at tracked DeleteRow in Hide Changes

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-08-25 17:05:58 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/16c705ec0d1ab4b4428577ccb0ea3fc14ee0fc88

tdf#148849 sw: fix cursor pos at tracked DeleteRow in Hide Changes

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-08-30 12:05:33 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b323f1fba2a7a409177f5296c6ba8b98c9e537ad
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL