tdf#148849 sw: fix cursor pos at tracked DeleteRow in Hide Changes

In Hide Changes mode, the text cursor jumped to the start of the
document after tracked deletion of a table row, instead of
remaining in the table in the next table row.

Regression from commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes".

Change-Id: Iff959c9a9940db013827e1c827bcb92c07b4b26a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138683
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>